fix app sizing to properly be fullscreen with no scrollbar

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -127,15 +127,3 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-
-:root {
-    min-height: 100vh;
-}
-
-body {
-    height: 100vh;
-}
-
-#root {
-    height: 100vh;
-}
